<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/detail"
        android:textColor="@color/orange"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/name"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="Voice 006.m4a"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/size"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="93.7 KB"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/last_modified"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lastModified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="November 9, 2020 23:06"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/bit_rate"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bitRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="128 kbps"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/path"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="Internal storage/Voice Recorder"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/location"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="Vienam"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/OKButton_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksand_bold"
            android:text="OK"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>